@@ -174,7 +174,7 @@
 	<key>CFBundleShortVersionString</key>
 	<string>1.1</string>
 	<key>CFBundleVersion</key>
-	<string>101u</string>
+	<string>100</string>
 </dict>
 </plist>
 ";
